--- a/package.json
+++ b/package.json
@@ -9,16 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "clsx": "^2.1.0",
     "copy-to-clipboard": "^3.3.3",
     "daisyui": "^4.9.0",
+    "framer-motion": "^11.0.24",
     "got": "^14.2.1",
+    "mini-svg-data-uri": "^1.4.4",
     "nanoid": "^5.0.6",
     "next": "14.1.4",
     "openai": "^4.29.2",
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
-    "remark-math": "^6.0.0"
+    "remark-math": "^6.0.0",
+    "tailwind-merge": "^2.2.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
