--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.12",
     "clsx": "^2.1.0",
     "copy-to-clipboard": "^3.3.3",
     "daisyui": "^4.9.0",
